# zcam1-sdk

./: .gitignore  .npmrc  Cargo.toml  Dockerfile  README.md  TECHNICAL_OVERVIEW.md  UPDATE_DOCS.md  Zcam1Sdk.podspec  android_vs_ios.md  docker-compose.yml  justfile  package-lock.json  package.json  rustfmt.toml
.cargo/: config.toml
.changeset/: clever-radios-travel.md  config.json  fix-ci-build.md  fix-ci-workflow.md  great-bees-clap.md
.github/workflows/: ci.yml  lint.yml  publish-major.yml  release-react-native-zcam1.yml  release-zcam1-verify.yml  release.yml
.zed/: settings.json
android/: gradle.properties
android_plans/: 01-attestation-integration.md  02-rust-android-crate.md  03-kotlin-camera.md  04-verify-updates.md  05-typescript-integration.md  06-build-system.md  07-testing.md  overview.md
backend/: Cargo.toml  README.md  build.rs
backend/src/: app.rs  cli.rs  lib.rs  main.rs
backend/tests/: cert_chain.rs  proof_generation.rs
crates/android/: Cargo.toml
crates/android/src/: certificate.rs  constants.rs  error.rs  extension.rs  key_attestation.rs  lib.rs  signature.rs  types.rs
crates/android/tests/: validate.rs
crates/bindings/: Cargo.toml
crates/bindings/src/: lib.rs
crates/c2pa-bindings/: Cargo.toml
crates/c2pa-bindings/src/: lib.rs
crates/c2pa-utils/: Cargo.toml  c2pa_settings.toml
crates/c2pa-utils/src/: android_signing.rs  error.rs  lib.rs  manifest_editor.rs  signing.rs  types.rs
crates/c2pa-utils/tests/: embed_manifest_to_dng.rs  embed_manifest_to_jpeg.rs  reader.rs  video_hash.rs
crates/certs-utils/: Cargo.toml
crates/certs-utils/src/: builder.rs  error.rs  lib.rs
crates/common/: Cargo.toml
crates/common/src/: certs.rs  constants.rs  db.rs  io.rs  lib.rs  prover.rs  verifier.rs
crates/common/tests/: c2pa.rs
crates/ios/: Cargo.toml
crates/ios/src/: assertion.rs  attestation.rs  certificate.rs  error.rs  io.rs  lib.rs  utils.rs  verifier.rs
crates/ios/tests/: validate.rs
crates/proving-bindings/: Cargo.toml
crates/proving-utils/: Cargo.toml  build.rs
crates/proving-utils/src/: error.rs  lib.rs  prover.rs
crates/proving-utils/src/network/: client.rs  grpc.rs  mod.rs  proof.rs  prover.rs  retry.rs  signer.rs  utils.rs
crates/proving-utils/tests/: basic.rs  basic_android.rs  basic_ios.rs
crates/testing-utils/: Cargo.toml  build.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: bindings.rs  error.rs  ios.rs  lib.rs  proofs.rs
crates/verifier/tests/: verify.rs
crates/verify-bindings/: Cargo.toml
crates/verify-bindings/src/: error.rs  lib.rs
crates/verify-utils/: Cargo.toml
crates/verify-utils/src/: bindings.rs  error.rs  ios.rs  lib.rs  proofs.rs
crates/verify-utils/tests/: verify.rs  verify_android.rs  verify_ios.rs
crates/wasm-bindings/: Cargo.toml
docs/: README.md  package-lock.json  package.json  styles.css  vocs.config.ts
example/: .gitignore  package-lock.json  package.json
example/app/: index.tsx
examples/android-test/: .gitignore  SETUP.md  app.json  package-lock.json  package.json
examples/capture/: ..env.un~  .npmrc  CHANGELOG.md  app.json  package-lock.json  package.json
examples/e2e/: .env.example  CHANGELOG.md  app.json  justfile  package-lock.json  package.json
examples/prove/: .env.example  CHANGELOG.md  app.json  package-lock.json  package.json
examples/verify/: .env.example  CHANGELOG.md  app.json  package-lock.json  package.json
ios/: Zcam1CameraViewManager.m
ios/C2PA/: CerificateService.swift  Signer.swift  SigningAlgorithm.swift  Stream.swift
node-verifier/: index.js  package-lock.json  package.json
programs/authenticity-android/: Cargo.toml
programs/authenticity-android/src/: main.rs
programs/authenticity-ios/: Cargo.toml
programs/authenticity-ios/src/: main.rs
programs/mock/: Cargo.toml
react-native-zcam1/: .gitignore  .prettierignore  CONTEXT.md  README.md  ReactNativeZcam1.podspec  SKILLS.md  Zcam1Sdk.podspec  app.plugin.js  eslint.config.mjs  justfile  package-lock.json  package.json  react-native.config.js  turbo.json  ubrn.config.proving.yaml  ubrn.config.yaml
react-native-zcam1-c2pa/: .gitignore  CHANGELOG.md  README.md  ReactNativeZcam1C2pa.podspec  Zcam1C2pa.podspec  justfile  package-lock.json  package.json  tsconfig.json  ubrn.config.yaml  urbn.config.dev.yaml
react-native-zcam1-c2pa/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
react-native-zcam1-c2pa/cpp/: react-native-zcam1-c2pa.cpp  react-native-zcam1-c2pa.h
react-native-zcam1-c2pa/ios/: Zcam1C2pa.h  Zcam1C2pa.mm
react-native-zcam1-c2pa/scripts/: download-framework.sh
react-native-zcam1-c2pa/src/: NativeReactNativeZcam1C2pa.ts  NativeZcam1C2pa.ts  index.ts  index.tsx
react-native-zcam1-capture/: .gitignore  .npmrc  .prettierrc  CHANGELOG.md  README.md  Zcam1Sdk.podspec  eslint.config.mjs  jest.config.js  justfile  package-lock.json  package.json  tsconfig.json
react-native-zcam1-common/: CHANGELOG.md  README.md  eslint.config.mjs  justfile  package-lock.json  package.json
react-native-zcam1-picker/: CHANGELOG.md  README.md  eslint.config.mjs  justfile  package-lock.json  package.json
react-native-zcam1-prove/: .gitignore  .prettierignore  CHANGELOG.md  README.md  ReactNativeZcam1Prove.podspec  Zcam1Prove.podspec  justfile  package-lock.json  package.json  tsconfig.json  ubrn.config.yaml
react-native-zcam1-verify/: .gitignore  .prettierignore  CHANGELOG.md  README.md  ReactNativeZcam1Verify.podspec  Zcam1Verify.podspec  justfile  package-lock.json  package.json  ubrn.config.yaml
scripts/: build-android.sh  fix-cpp-adapter.sh
src/: camera.tsx  crypto.ts  index.tsx
web-verifier/: README.md  index.html  package-lock.json  package.json
web-verifier/src/: App.tsx  (+1 more)
zcam1-common/: package-lock.json  package.json  tsconfig.json
zcam1-verifier/: .gitignore  package-lock.json  package.json
zcam1-verify/: .gitignore  CONTEXT.md  Cargo.toml  README.md  SKILLS.md  justfile  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  ubrn.config.yaml  vite.config.node.ts  vite.config.ts  vitest.config.node.ts
(+234 files in other folders)
