[workspace]
members = ["backend", "crates/*"]
resolver = "3"


[workspace.dependencies]

# members
zcam1-common = { path = "./crates/common" }
zcam1-ios = { path = "./crates/ios" }
zcam1-c2pa-utils = { path = "./crates/c2pa-utils" }
zcam1-certs-utils = { path = "./crates/certs-utils" }
zcam1-proving-utils = { path = "./crates/proving-utils" }

# sp1
sp1-build = "5.2.3"
sp1-sdk = "5.2.3"
sp1-prover = "5.2.3"
sp1-zkvm = "5.2.3"
sp1-verifier = "5.2.3"

# misc
base64ct = "1.6.0"
bytes = "1.5.0"
c2pa = { version = "0.73.1", default-features = false, features = ["rust_native_crypto"] }
eyre = "0.6.12"
futures = "0.3.31"
getrandom = "0.3.4"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
uniffi = { version = "=0.29.3", features = [ "cli" ] }
