[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"

# Allow common exceptions
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.dependencies]

# members
zcam1-android = { path = "./crates/android" }
zcam1-common = { path = "./crates/common" }
zcam1-ios = { path = "./crates/ios" }
zcam1-c2pa-utils = { path = "./crates/c2pa-utils" }
zcam1-certs-utils = { path = "./crates/certs-utils" }
zcam1-proving-utils = { path = "./crates/proving-utils" }
zcam1-verify-utils = { path = "./crates/verify-utils" }

# sp1
sp1-build = "6.0.0"
sp1-sdk = "6.0.0"
sp1-prover = "6.0.0"
sp1-zkvm = "6.0.0"
sp1-verifier = "6.0.0"

# misc
base64ct = "1.6.0"
bytes = "1.5.0"
c2pa = { version = "0.73.1", default-features = false, features = ["rust_native_crypto"] }
eyre = "0.6.12"
futures = "0.3.31"
getrandom = "0.3.4"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
uniffi = { version = "=0.29.3", features = [ "cli" ] }

[patch.crates-io]
sp1-build = { git = "https://github.com/succinctlabs/sp1", branch = "aurelien/ios-tls" }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1", branch = "aurelien/ios-tls" }
sp1-prover = { git = "https://github.com/succinctlabs/sp1", branch = "aurelien/ios-tls" }
sp1-verifier = { git = "https://github.com/succinctlabs/sp1", branch = "aurelien/ios-tls" }

c2pa = { git = "https://github.com/succinctlabs/c2pa-rs", branch = "aurelien/sp1-fixes"}

# sp1-build = { path = "../sp1/crates/build" }
# sp1-sdk = { path = "../sp1/crates/sdk" }
# sp1-prover = { path = "../sp1/crates/prover" }
# sp1-verifier = { path = "../sp1/crates/verifier" }
