[package]
name = "zcam1-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Members
zcam1-common.workspace = true
zcam1-ios = { workspace = true, features = ["proving"] }

sp1-sdk.workspace = true

base64ct.workspace = true
eyre.workspace = true
getrandom.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true

axum = "0.8.6"
clap = { version = "4.5.47", features = ["derive", "env"] }
dotenvy = "0.15.7"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-appender = "0.2.3"
tower-http = { version = "0.6.8",  features = ["trace"] }

[dev-dependencies]
axum-test = "18.3.0"
base64ct.workspace = true

[build-dependencies]
sp1-build.workspace = true

[features]
mock = ["zcam1-common/mock"]
