[package]
name = "zcam1-bindings"
version = "0.1.0"
edition = "2024"

[dependencies]
zcam1-c2pa-utils = { workspace = true, features = ["io", "editor"] }
zcam1-certs-utils.workspace = true
zcam1-proving-utils.workspace = true
zcam1-verifier.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "zcam1_bindings"
