[package]
name = "zcam1-c2pa-bindings"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
zcam1-c2pa-utils = { workspace = true, features = ["io", "editor"] }
zcam1-certs-utils.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "zcam1_c2pa_bindings"
