[package]
name = "zcam1-c2pa-utils"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
base64ct.workspace = true
c2pa.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uniffi.workspace = true

async-trait = "0.1.89"
futures = "0.3.31"
serde_json_canonicalizer = { version = "0.3.1" }

# Software signing (Android / non-Apple platforms)
p256 = { version = "0.13", features = ["jwk", "ecdsa"], optional = true }
zcam1-certs-utils = { workspace = true, optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
security-framework = { version = "3.5.1", optional = true }

[dev-dependencies]
zcam1-c2pa-utils = { path = ".", features = ["io", "editor"] }
zcam1-common.workspace = true
tempfile = "3.23.0"
tokio = { version = "1.48", default-features = false, features = [
    "rt",
    "macros"
] }
p256 = { version = "0.13", features = ["jwk", "ecdsa"] }

[features]
io = ["c2pa/file_io"]
editor = ["dep:security-framework"]
software-signing = ["dep:p256", "dep:zcam1-certs-utils"]
