[package]
name = "zcam1-certs-utils"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
serde_json.workspace = true
thiserror.workspace = true
uniffi.workspace = true

der = "0.7"
p256 = { version = "0.13", features = ["jwk", "ecdsa", "pkcs8"] }
rcgen = "0.14.5"
sha2 = { version = "0.10", features = ["oid"] }
spki = { version = "0.7", features = ["pem", "alloc"] }
x509-cert = { version = "0.2", features = ["builder", "pem"] }
