[package]
name = "zcam1-common"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
uniffi.workspace = true

sp1-sdk = { workspace = true, optional = true }

[dev-dependencies]
c2pa.workspace = true
x509-parser = "0.16.0"


[features]
proving = ["dep:sp1-sdk"]
