[package]
name = "zcam1-proving-utils"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
zcam1-common = {workspace = true, features = ["proving"] }
serde.workspace = true
sp1-sdk = { workspace = true, features = ["network"] }
thiserror.workspace = true
uniffi.workspace = true

alloy-primitives = { version = "1.5.2", features = ["getrandom"] }
bincode = { version =  "1.3.3" }
lru = "0.16.3"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

[build-dependencies]
sp1-build.workspace = true
sp1-prover.workspace = true
bincode = {version =  "1.3.3" }
cargo_metadata = "0.18.1"
cfg_aliases = "0.2.1"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

[dev-dependencies]
sp1-sdk = { workspace = true, features = ["reserved-capacity"] }
