[package]
name = "zcam1-verify-bindings"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
base64ct.workspace = true
serde.workspace = true
sha2.workspace = true
uniffi.workspace = true
thiserror.workspace = true

sp1-uniffi-verifier = { git = "https://github.com/succinctlabs/example-sp1-wasm-verifier" }

# Platform-specific attestation verification
zcam1-ios = { workspace = true, optional = true }
zcam1-android = { workspace = true, optional = true }

[features]
default = ["apple-verify"]
apple-verify = ["dep:zcam1-ios"]
android-verify = ["dep:zcam1-android"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "zcam1_verify_bindings"
