[package]
name = "zcam1-verify-utils"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
# Members
zcam1-c2pa-utils = { workspace = true, features = ["io"] }
zcam1-android.workspace = true
zcam1-ios.workspace = true

# sp1
sp1-verifier.workspace = true

base64ct.workspace = true
sha2.workspace = true
thiserror.workspace = true
uniffi.workspace = true
